Commit back in multi bot parent  changes
Hopefully now you will be able to have more than one bot as a parent

--- a/admin/default.page.htm
+++ b/admin/default.page.htm
@@ -247,9 +247,9 @@ between the start and end section tags are the only parts of the template that a
             </span></td>
           </tr>
           <tr>
-            <td><label for="bot_parent_id"><span class="label">Bot Parent Name</span></label></td>
+            <td><label for="bot_parent_ids"><span class="label">Bot Parent Names</span></label></td>
             <td><span class="formw">
-              <select name="bot_parent_id" id="bot_parent_id">
+              <select name="bot_parent_ids[]" id="bot_parent_ids" multiple>
 [parent_options]
               </select>
             </span></td>
